fix jolticon spacing for timeline-list

--- a/components/timeline-list/timeline-list.styl
+++ b/components/timeline-list/timeline-list.styl
@@ -38,12 +38,11 @@
 			@media $media-xs
 				display: none
 
-
 			> .jolticon
 				position: relative
-				top: -1px
+				top: -2px
 				margin: 0
-				vertical-align: text-top
+				vertical-align: baseline
 
 		&-main
 			clearfix()
